--- a/app/src/main/res/layout/activity_register_chip.xml
+++ b/app/src/main/res/layout/activity_register_chip.xml
@@ -3,24 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
+
 
     <EditText
-        android:id="@+id/mime"
-        android:hint="Mime-type"
+        android:id="@+id/studentId"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="application/vnd.facebook.places" />
+        android:hint="Input ID" />
 
     <EditText
-        android:id="@+id/value"
-        android:hint="Value"
+        android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="180542738648332" />
+        android:hint="Input Name" />
+
+    <EditText
+        android:id="@+id/className"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Input Class Name" />
+
+    <EditText
+        android:id="@+id/parentPhoneNumber"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Input Parent P/N" />
+
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start write modus" />
