--- a/app/src/main/res/layout/activity_manage_registered_student.xml
+++ b/app/src/main/res/layout/activity_manage_registered_student.xml
@@ -16,14 +16,16 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/registerStudentButton"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:text="학생등록"
-            android:textSize="10dp"
-            android:id="@+id/registerStudentButton"/>
+            android:textSize="10dp" />
 
         <Button
             android:layout_width="70dp"
