--- a/app/src/main/res/layout/activity_manage_registered_student.xml
+++ b/app/src/main/res/layout/activity_manage_registered_student.xml
@@ -37,6 +37,7 @@
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:hint="조회할 학생이름"
+            android:id="@+id/selectStudentName"
             android:textSize="10dp" />
 
     </LinearLayout>
