--- a/app/src/main/res/layout/activity_manage_registered_student.xml
+++ b/app/src/main/res/layout/activity_manage_registered_student.xml
@@ -28,16 +28,17 @@
             android:textSize="10dp" />
 
         <Button
+            android:id="@+id/deleteAllStudentButton"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:text="전체삭제"
             android:textSize="10dp" />
 
         <EditText
+            android:id="@+id/selectStudentName"
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:hint="조회할 학생이름"
-            android:id="@+id/selectStudentName"
             android:textSize="10dp" />
 
     </LinearLayout>
