--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -30,7 +30,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -38,7 +38,7 @@
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
+                android:textSize="12dp"
                 android:textStyle="bold" />
 
 
@@ -46,7 +46,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15dp"
+                android:textSize="12dp"
                 android:textStyle="" />
 
             <TextView
@@ -54,13 +54,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="15dp" />
+                android:textSize="12dp" />
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="15dp" />
+                android:textSize="12dp" />
 
         </LinearLayout>
 
@@ -70,7 +70,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:padding="0dp"
-            android:src="@drawable/trash"
-            android:text="Order" />
+            android:src="@drawable/trash" />
     </LinearLayout>
 </LinearLayout>
